--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
               <h1>Cente Pay Uganda</h1>
               <p><kbd>Click here for gifts</kbd></p>
              
+              <div class="text-info">Information</div>
+
               <a href="#" class="text-success">Success</a>
 
               <div class="text-danger">Danger
