--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
               <div class="text-warning">Warning</div>
 
+              <div class="text-danger">Danger</div>
+
         <div class="row">
             <div class="col">Contact Us</div>
                 <div class="col">Know More</div>
